Set transport controls disabled when addressed

--- a/html/index.html
+++ b/html/index.html
@@ -824,7 +824,7 @@ $('document').ready(function() {
             <div class="mod-control-group clearfix">
                 <div class="mod-switch">
                     <span class="mod-switch-title">Playing</span>
-                    <div class="mod-switch-image off"></div>
+                    <div class="mod-switch-image" mod-widget="switch"></div>
                     <div class="mod-address"></div>
                 </div>
 
@@ -833,7 +833,7 @@ $('document').ready(function() {
                     <span class="mod-knob-min-value">20 BPM</span>
                     <span class="mod-knob-max-value">999 BPM</span>
                     <span class="mod-knob-current-value">---.-- BPM</span>
-                    <div class="mod-knob-image"></div>
+                    <div class="mod-knob-image" mod-widget="film"></div>
                     <div class="mod-address"></div>
                 </div>
             </div>
