--- a/html/index.html
+++ b/html/index.html
@@ -112,6 +112,10 @@ $('document').ready(function() {
         presetDisableButton: $('#pedalboard-info .js-preset-disable'),
         transportButton: $('#mod-transport-icon'),
         transportWindow: $('#mod-transport-window'),
+        transportPlay: $('#mod-switch-transport-play'),
+        transportBPB: $('#mod-knob-transport-bpb'),
+        transportBPM: $('#mod-knob-transport-bpm'),
+        transportSyncMode: $('#mod-enum-transport-sync-mode'),
         effectBox: $('#plugins-library'),
         pedalboardTrigger: $('#main-menu #mod-plugins'),
         cloudPluginBox: $('#cloud-plugins-library'),
@@ -234,6 +238,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
 <script type="text/javascript" src="js/cc-manager.js?v={{version}}"></script>
+<script type="text/javascript" src="js/transport.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 
 </head>
@@ -844,6 +849,14 @@ $('document').ready(function() {
                     <span class="mod-knob-current-value">-/4</span>
                     <div class="mod-knob-image" mod-widget="film"></div>
                     <div class="mod-address"></div>
+                </div>
+
+                <div class="mod-enumerated" id="mod-enum-transport-sync-mode">
+                    <span class="mod-enumerated-title">Sync Mode</span>
+                    <div class="mod-enumerated-list" mod-widget="custom-select">
+                        <div mod-port-value="none">None / Addressings</div>
+                        <div mod-port-value="link">Ableton&trade; Link</div>
+                    </div>
                 </div>
             </div>
         </div>
