Implement transport sync-mode widget

--- a/html/index.html
+++ b/html/index.html
@@ -853,9 +853,9 @@ $('document').ready(function() {
 
                 <div class="mod-enumerated" id="mod-enum-transport-sync-mode">
                     <span class="mod-enumerated-title">Sync Mode</span>
-                    <div class="mod-enumerated-list" mod-widget="custom-select">
-                        <div mod-port-value="none">None / Addressings</div>
-                        <div mod-port-value="link">Ableton&trade; Link</div>
+                    <div class="mod-enumerated-list">
+                        <div mod-sync-mode="none">None / Addressings</div>
+                        <div mod-sync-mode="link">Ableton&trade; Link</div>
                     </div>
                 </div>
             </div>
