Remove BPM addressing when enabling link sync mode

--- a/html/settings.html
+++ b/html/settings.html
@@ -707,7 +707,8 @@ $('document').ready(function() {
                     </label>
                     <br/><br/>
                     <p>
-                        <b>Start the MOD's restore/upgrade mode</b>, where you can manually update the MOD via USB.<br/>
+                        <b>Start the MOD's restore/upgrade mode</b>, where you can manually update the MOD via
+                            USB Mass Storage mode.<br/>
                         Note that all unsaved pedalboard changes will be lost.
                     </p>
                     <label>
