Add (hidden) Max gen~ category, dynamically visible

--- a/html/index.html
+++ b/html/index.html
@@ -597,6 +597,7 @@ $('document').ready(function() {
             <li id="effect-tab-Spatial">Spatial</li>
             <li id="effect-tab-Spectral">Spectral</li>
             <li id="effect-tab-Utility">Utility</li>
+            <li id="effect-tab-MaxGen" style="display:none;">Max gen~</li>
         </ul>
         <span class="js-settings-trigger settings selected"></span>
         <span class="js-effects-fold fold"></span>
@@ -631,6 +632,7 @@ $('document').ready(function() {
                     <div id="effect-content-Spatial" class="plugins-wrapper"></div>
                     <div id="effect-content-Spectral" class="plugins-wrapper"></div>
                     <div id="effect-content-Utility" class="plugins-wrapper"></div>
+                    <div id="effect-content-MaxGen" class="plugins-wrapper"></div>
                 </div>
             </div>
             <div class="nav nav-right"></div>
