Allow to disable search

--- a/html/index.html
+++ b/html/index.html
@@ -70,6 +70,7 @@
     var DEFAULT_PEDALBOARD = '{{default_pedalboard}}'
     var FAVORITES = {{favorites}}
     var PREFERENCES = {{preferences}}
+    var SEARCH_ENABLED = PREFERENCES['search-enabled'] != "false"
     var DEBUG = true;
     if (!DEBUG) {
         console = console || {}
