--- a/html/settings.html
+++ b/html/settings.html
@@ -430,7 +430,18 @@ $('document').ready(function() {
     // ----------------------------------------------------------------------------------------------------------------
 
     $('#cc-device-update-window').find('.js-cancel').click(function () {
-        $('#cc-device-update-window').hide()
+        $.ajax({
+            url: '/controlchain/cancel/',
+            type: 'POST',
+            success: function () {
+                $('#cc-device-update-window').hide()
+            },
+            error: function () {
+                $('#cc-device-update-window').hide()
+            },
+            cache: false,
+            dataType: 'json'
+        })
         return false
     })
 
